# notesMD

./: CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/editor/: MarkdownEditor.cpp  MarkdownEditor.h  MarkdownRenderer.cpp  MarkdownRenderer.h
src/filesystem/: FilesystemInterface.cpp  FilesystemInterface.h  NoteModel.cpp  NoteModel.h  NotebookManager.cpp  NotebookManager.h  NotebookModel.cpp  NotebookModel.h
src/models/: Attachment.cpp  Attachment.h  Note.cpp  Note.h  Notebook.cpp  Notebook.h
src/panels/: EditorPanel.cpp  EditorPanel.h  NotebookPanel.cpp  NotebookPanel.h  NotesPanel.cpp  NotesPanel.h
src/ui/: CreateNotebookDialog.cpp  CreateNotebookDialog.h  CreateNotebookDialog.ui
src/utils/: FilesystemUtils.cpp  FilesystemUtils.h  LambdaSlot.cpp  LambdaSlot.h
